moved locally jquery-ui.css and fixed spastic layout issues with typeahead on stocks list page during javascript load

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -559,23 +559,10 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 
 
 /********************************/
-/* LIST PAGES
-/********************************/
-
-.list-search-bar {
-  padding-bottom: 15px;
-}
-
-
-
-
-/********************************/
 /* STOCKS, HOLDINGS SHOW PAGE
 /********************************/
 
-.stock-header {
-  margin-bottom: 20px;
-}
+.stock-header { margin-bottom: 20px; }
 
 .stock-header-row-1 { padding-bottom: 5px; }
 .stock-header-row-2 {}
@@ -585,9 +572,7 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   font-weight: bold;
 }
 
-.stock-symbol {
-  font-weight: bold;
-}
+.stock-symbol { font-weight: bold; }
 .stock-current-price { font-size: 20px; font-weight: bold; }
 .stock-currency { font-weight: bold; }
 .stock-change
@@ -703,6 +688,23 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 
 
 /********************************/
+/* LIST PAGES
+/********************************/
+
+.list-search-bar {
+  padding-bottom: 15px;
+}
+
+.list-search-bar input[type="text"] {
+  margin-right: 1px;
+  width: 520px;
+  height: 34px;
+  line-height: 34px;
+  font-size: 17.5px;
+}
+
+
+/********************************/
 /* TWITTER TYPEAHEAD (stocks)
 /********************************/
 
@@ -754,25 +756,6 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 
 .twitter-typeahead .tt-suggestion p { margin: 0; }
 
-/*
-.twitter-typeahead,
-.tt-query,
-.tt-hint {
-  width: 540px;
-  height: 30px;
-  padding: 8px 12px;
-  font-size: 24px;
-  line-height: 30px;
-  border: 2px solid #ccc;
-  -webkit-border-radius: 8px;
-     -moz-border-radius: 8px;
-          border-radius: 8px;
-  outline: none;
-}
-
-
-
-*/
 
 /********************************/
 /* JQUERY-UI AUTOCOMPLETE
